--- a/CallCenterOS.CORE/CallCenterOS.CORE.csproj
+++ b/CallCenterOS.CORE/CallCenterOS.CORE.csproj
@@ -55,6 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="ForeingKeyAttribute.cs" />
+    <Compile Include="Incidence.cs" />
+    <Compile Include="IncidencePriority.cs" />
+    <Compile Include="IncidenceStatus.cs" />
+    <Compile Include="IncidenceType.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
