--- a/CallCenterOS.Aplication/CallCenterOS.Aplication.csproj
+++ b/CallCenterOS.Aplication/CallCenterOS.Aplication.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="GenericManager.cs" />
+    <Compile Include="IncidenceManager.cs" />
+    <Compile Include="MessageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
